<resources>
    <string name="app_name">BackDrops</string>
    <string name="backdrops">BACKDROPS</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up_link">You Don\'t Have Account, SignUp</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="login_link">You Already Have Account, Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">hellofromexplore</string>
    <string name="hello_from_favourite">hello from Favourite</string>
    <string name="explore">Explore</string>
    <string name="collections">Collections</string>
    <string name="my_uploads">My Uploads</string>
    <string name="categories">Categories</string>
    <string name="SignOut">SignOut</string>
    <string name="todo">TODO</string>
    <string name="overview">overview</string>
</resources>
