<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/ic_menu_explore"
            android:title="@string/explore"/>
        <item
            android:id="@+id/nav_collections"
            android:icon="@drawable/ic_menu_collections"
            android:title="@string/collections" />
        <item
            android:id="@+id/nav_upload"
            android:icon="@drawable/ic_menu_upload"
            android:title="@string/my_uploads" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_nav_categories"
            android:title="@string/categories"/>
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_logout"
            android:title="@string/SignOut"/>
    </group>

</menu>
