<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            android:fitsSystemWindows="true">

            <ImageView
                android:id="@+id/poster"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                app:layout_collapseMode="parallax"
                android:src="@mipmap/ic_launcher"
                android:scaleType="fitXY">
            </ImageView>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:background="@drawable/background_gradient">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#024669">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/app_name"
                    android:src="@mipmap/nav_bar_icon" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/movie_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="18dp"
                        android:text="@string/app_name"
                        android:textColor="#ffff"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/movie_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/collections"
                        android:textColor="#ffff"
                        android:textSize="16sp"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="80dp"
                android:background="@drawable/background_gradient"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/original_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/overview"
                    android:textColor="#ffff"
                    android:maxLength="250"
                    android:textSize="16sp"
                    android:layout_marginEnd="10dp" />
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_marginTop="550dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/save_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:contentDescription="TODO"
            android:src="@drawable/ic_save" />

        <TextView
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:text="Save"
            android:textAllCaps="true"
            android:textColor="#ffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider"
            android:layout_width="2dp"
            android:layout_height="50dp"
            android:layout_marginTop="-65dp"
            android:layout_marginLeft="145dp"
            android:background="#ffff"
            android:layout_marginStart="145dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="190dp"
            android:layout_marginTop="-60dp"
            android:contentDescription="TODO"
            android:src="@drawable/ic_favorite_48dp"
            android:layout_marginStart="190dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="173dp"
            android:layout_marginLeft="173dp"
            android:text="Favorite"
            android:textAllCaps="true"
            android:textColor="#ffff"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <View
            android:id="@+id/divider2"
            android:layout_width="2dp"
            android:layout_height="50dp"
            android:layout_marginTop="-65dp"
            android:layout_marginLeft="290dp"
            android:background="#ffff"
            android:layout_marginStart="290dp" />

        <ImageView
            android:id="@+id/set_wallpaper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="320dp"
            android:layout_marginTop="-60dp"
            android:contentDescription="TODO"
            android:src="@drawable/ic_set"/>

        <TextView
            android:id="@+id/set_as"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="325dp"
            android:layout_marginLeft="325dp"
            android:text="Set"
            android:textAllCaps="true"
            android:textColor="#ffff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>